# malstrom

./: .gitignore  Cargo.toml  README.md  build.rs  epochs.md  foojob.yaml  ica.md  icadd.typ  jetstream_config.yaml  persistent_source.d2  rescaling.typ  snapshot_config.yaml
jetstream-core/: .gitignore  Cargo.toml  build.rs  concept.py  feed-data.ipynb  persistent_source.d2  snapshot_config.yaml
jetstream-core/examples/: icadd.rs  icadd.rs_old  kafka_source.rs_old  multithread.rs  network.rs  network.rs_old  otel.broken_rs  persistence.rs  persistent.rs
jetstream-core/kubernetes/: deployment.sh  ingress.yaml  networking.sh  redpanda.yaml
jetstream-core/src/: config.rs  filter.rs  frontier.rs  inspect.rs  kafka.rs  keyed.rs  lib.rs  operators.rs  prelude.rs  runtime.rs  source.rs  sources.rs  stateful_map.rs  stateless_op.rs  stream.rs  test.rs  testing.rs  time.rs  types.rs  util.rs  worker.rs  worker.rs_old
jetstream-core/src/channels/: mod.rs  mpsc.rs  never.rs  oneof.rs  operator_io.rs  selective_broadcast.rs  spsc.rs  watch.rs
jetstream-core/src/keyed/: distributed.rs  distributed_old.rs  exchange.rs  key_distribute.rs  key_local.rs  mod.rs  normal_dist.rs  partitioners.rs  rescaling.md  types.rs
jetstream-core/src/keyed/distributed/: collect.rs  messages.rs  (+14 more)
jetstream-core/src/network_exchange/: grpc.rs  mod.rs  send.rs  service.proto
jetstream-core/src/networking/: mod.rs  service.proto
jetstream-core/src/operators/: cloned.rs  common.rs  filter.rs  filter_map.rs  flat_map.rs  flatten.rs  inspect.rs  map.rs  mod.rs  probe.rs  sink.rs  source.rs  split.rs  stateful_map.rs  stateful_op.rs  stateful_transform.rs  stateless_op.rs  time.rs  void.rs  window.rs
jetstream-core/src/runtime/: builder.rs  communication.rs  execution_handle.rs  mod.rs  runtime_flavor.rs  threaded.rs  threads.rs
jetstream-core/src/sinks/: collector.rs  mod.rs  stateless.rs  vec.rs
jetstream-core/src/snapshot/: barrier.rs  controller.rs  mod.rs  server.rs  slatedb.rs  statefulset.yaml  triggers.rs
jetstream-core/src/sources/: iterator.rs  mod.rs  single_iterator.rs  stateful_source.rs
jetstream-core/src/stream/: builder.rs  jetstream.rs  mod.rs  operator.rs  operator_trait.rs
jetstream-core/src/testing/: communication.rs  iterator_source.rs  mod.rs  operator_tester.rs  vec_sink.rs
jetstream-core/src/types/: data.rs  key.rs  message.rs  operator_partitioner.rs  time.rs
jetstream-kafka/: Cargo.toml
jetstream-kafka/examples/: .env  README.md  nexmark-01.rs
jetstream-kafka/src/: consumer.rs  lib.rs
jetstream-nexmark/: Cargo.toml
jetstream-nexmark/src/: main.rs  q1.rs  q2.rs  q4.rs
malstrom-core/: Cargo.toml
malstrom-core/examples/: basic_noop copy.rs  basic_noop.rs  basic_operators.rs  cloned_streams.rs  custom_stateful_operator.rs  custom_stateless_operator.rs  event_time.rs  event_time_out_of_order.rs  file_sink_stateful.rs  file_sink_stateless.rs  file_source_stateful.rs  file_source_stateless.rs  joining_streams.rs  keyed_streams.rs  look_ma_im_streaming.rs  multithreading.rs  rescaling.rs  slatedb_backend.rs  slatedb_backend_failing.rs  split_streams.rs  stateful_program_multiple_keys.rs  stateful_programs.rs  ttl_map_example.rs
malstrom-core/examples/eventtime/: Cargo.toml
malstrom-core/src/: errorhandling.rs  lib.rs
malstrom-core/src/channels/: mod.rs  operator_io.rs  spsc.rs
malstrom-core/src/coordinator/: communication.rs  coordinator.rs  failfast.rs  messages.rs  mod.rs  state.rs  types.rs  watchmap.rs
malstrom-core/src/keyed/: distributed.rs  key_distribute.rs  key_local.rs  mod.rs  partitioners.rs
malstrom-core/src/operators/: cloned.rs  filter.rs  filter_map.rs  flatten.rs  inspect.rs  map.rs  mod.rs  rich_function.rs  sink.rs  source.rs  split.rs  stateful_map.rs  stateful_op.rs  stateless_op.rs  ttl_map.rs
malstrom-core/src/runtime/: builder.rs  communication.rs  mod.rs  rescaling.rs  runtime_flavor.rs  threaded.rs
malstrom-core/src/sinks/: mod.rs  stateful.rs  stateless.rs  stdout.rs  vec_sink.rs
malstrom-core/src/snapshot/: controller.rs  mod.rs  slatedb.rs  triggers.rs
malstrom-core/src/sources/: mod.rs  single_iterator.rs  stateful.rs  stateful_source.rs  stateless.rs  stateless_source.rs
malstrom-core/src/stream/: builder.rs  mod.rs
malstrom-core/src/testing/: communication.rs  iterator_source.rs  mod.rs  operator_tester.rs  vec_sink.rs
malstrom-core/src/types/: data.rs  key.rs  message.rs  mod.rs  operator_partitioner.rs  time.rs
malstrom-core/src/worker/: mod.rs
malstrom-k8s/: Cargo.toml  artifact-downloader.dockerfile  artifact-manager.dockerfile  build.rs  k8s-operator.dockerfile  malstrom-operator.dockerfile
malstrom-k8s-operator/: Cargo.toml
malstrom-k8s-operator/src/: crd.rs  finalizer.rs  job.rs  main.rs  reconciliation.rs
malstrom-k8s/artifact-downloader/: Cargo.toml  Dockerfile  README.md
malstrom-k8s/artifact-downloader/src/: cli.rs  main.rs
malstrom-k8s/artifact-manager/: Cargo.toml  Readme.md  Rocket.toml
malstrom-k8s/artifact-manager/src/: main.rs
malstrom-k8s/dev-scripts/: install-operator.sh  push-all-images.sh  start-kind.sh
malstrom-k8s/operator/: Cargo.toml  README.md  build.rs
malstrom-k8s/operator/crds/: Cargo.toml
malstrom-k8s/operator/src/: errors.rs  finalizer.rs  main.rs  reconcilation.rs
malstrom-k8s/proto/: exchange.proto  k8s_operator_api.proto  operator_api.proto
malstrom-k8s/runtime/: Cargo.toml  build.rs
malstrom-k8s/runtime/examples/: basic_program.rs
malstrom-k8s/runtime/proto/: k8s_operator_api.proto
malstrom-k8s/runtime/src/: README.md  config.rs  lib.rs
malstrom-k8s/src/: config.rs  lib.rs
malstrom-k8s/src/communication/: backend.rs  backend_old.rs  client.rs  coordinator_backend.rs  discovery.rs  grpc_transport.rs  mod.rs  transport._old_rs  util.rs  worker_backend.rs
malstrom-kafka/: Cargo.toml
malstrom-kafka/examples/: source_sink.rs
malstrom-kafka/src/: consumer.rs  lib.rs  record.rs  sink.rs  source.rs
postbox/: Cargo.toml  build.rs
postbox/examples/: simple.old_rs  simple.rs
postbox/src/: errors.rs  lib.rs  lib_old.rs  service.proto
(+210 files in other folders)
