[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "2.0.0-rc.3"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
derive-new = "0.6.0"
dns-lookup = "2.0.4"
flume = "0.11.0"
indextree = "4.6.0"
itertools = "0.11.0"
nng = "1.0.1"
pretty_assertions = "1.4.0"
prost = { version = "0.12.3", features = ["prost-derive"] }
rand = "0.8.5"
rdkafka = { version = "0.34.0", features = ["cmake-build"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tracing = "0.1.40"
url = "2.4.1"
kube = { version = "0.87.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
indexmap = "2.1.0"

[build-dependencies]
prost = "0.12.3"
tonic-build = "0.10.2"
