[workspace]
resolver = "2"
members = [
    "malstrom-core",
    "k8s-app",
    "malstrom-k8s",
    "malstrom-k8s-operator",
    "malstrom-kafka", "malstrom-windows",
]


[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH protobuf-compiler",
]
