[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.75"
bincode = {version = "2.0.0-rc.3", features = ["serde"] }
derive-new = "0.6.0"
# dns-lookup = "2.0.4"
flume = "0.11.0"
indextree = "4.6.0"
itertools = "0.11.0"
# pretty_assertions = "1.4.0"
prost = { version = "0.12.3", features = ["prost-derive"] }
rand = "0.8.5"
# rdkafka = { version = "0.34.0", features = ["cmake-build"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tracing = { version = "0.1.40", features = ["log"] }
url = "2.4.1"
# kube = { version = "0.87.2", features = ["runtime", "derive"] }
# k8s-openapi = { version = "0.20.0", features = ["latest"] }
indexmap = {version = "2.1.0", features = ["serde"] }
# serde_yaml = "0.9.30"
config = "0.13.4"
lazy_static = "1.4.0"
serde_derive = "1.0.196"
# apache-avro = { version = "0.16.0", features = ["derive", "snappy"] }
glob = "0.3.1"
libm = "0.2.8"
http-serde = "2.0.0"
tracing-opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
proptest = "1.5.0"



[build-dependencies]
prost = "0.12.3"
# tonic-build = "0.10.2"

[dev-dependencies]
tracing-subscriber = "0.3.18"
proptest = "1.5.0"
