[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "2.0.0-rc.3", features = ["serde"] }
derive-new = "0.6.0"
flume = "0.11.0"
indextree = "4.6.0"
itertools = "0.11.0"
prost = { version = "0.12.3", features = ["prost-derive"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tracing = { version = "0.1.40", features = ["log"] }
url = "2.4.1"
indexmap = {version = "2.1.0", features = ["serde"] }
config = "0.13.4"
lazy_static = "1.4.0"
serde_derive = "1.0.196"
glob = "0.3.1"
libm = "0.2.8"
http-serde = "2.0.0"
tracing-opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
proptest = "1.5.0"



[build-dependencies]
prost = "0.12.3"
# tonic-build = "0.10.2"

[dev-dependencies]
tracing-subscriber = "0.3.18"
proptest = "1.5.0"
