[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tracing = { version = "0.1.40", features = ["log"] }
indexmap = { version = "2.1.0", features = ["serde"] }
config = "0.13.4"
lazy_static = "1.4.0"
serde_derive = "1.0.196"

slatedb = { version = "0.3.0", optional = true, features = ["azure"] }
object_store = { version = "0.11.1", optional = true, features = ["cloud"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "rt"], optional = true}
bytes = { version = "1.8.0", optional = true }
tokio-stream = { version = "0.1.16", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.18"
proptest = "1.5.0"

[features]
slatedb = ["dep:slatedb", "dep:object_store", "dep:bytes", "dep:tokio", "dep:tokio-stream"]

[[example]]
name = "persistence"
required-features = ["slatedb"]
