[package]
name = "jetstream-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jetstream = { path = "../jetstream-core" }
metrics = "0.22.3"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
