[package]
name = "jetstream-nexmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
flume = "0.11.0"
jetstream = { version = "0.1.0", path = "../jetstream-core" }
nexmark = { version = "0.2.0", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }

[[bin]]
name = "q1"
path = "src/q1.rs"

[[bin]]
name = "q2"
path = "src/q2.rs"

[[bin]]
name = "q4"
path = "src/q4.rs"
