[package]
name = "malstrom"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tracing = { version = "0.1.40", features = ["log"] }
indexmap = { version = "2.1.0", features = ["serde"] }

slatedb = { version = "0.3.0", optional = true, features = ["azure"] }
object_store = { version = "0.11.1", optional = true, features = ["cloud"] }
bytes = { version = "1.8.0", optional = true }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "rt", "sync", "time"] }
tokio-stream = { version = "0.1.16", optional = true }
rmp-serde = "1.3.0"
seahash = "4.1.0"
rand = "0.8.5"
bon = "3.3.2"
async-trait = "0.1.85"
futures = "0.3.31"
flume = "0.11.1"
tracing-subscriber = "0.3.19"
redb = "2.4.0"
anyhow = "1.0.95"
expiremap = { version = "0.1.0-beta.3", features = ["serde"] }
eyre = "0.6.12"

[dev-dependencies]
tracing-subscriber = "0.3.18"
proptest = "1.5.0"

[features]
slatedb = ["dep:slatedb", "dep:object_store", "dep:tokio-stream"]
