[package]
name = "malstrom"
version = "0.1.0"
edition = "2021"
description = "Malstrom is a distributed, stateful stream processing framework written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MalstromDevelopers/malstrom"
readme = "../README.md"
categories = [
    "concurrency",
]
keywords = [
    "stream processing",
    "data processing",
    "framework",
    "streaming",
    "distributed",
]

[lints]
workspace = true

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "1.0.49"
tracing = { version = "0.1.40", features = ["log"] }
indexmap = { version = "2.1.0", features = ["serde"] }

slatedb = { version = "0.3.0", optional = true, features = ["azure"] }
object_store = { version = "0.11.1", optional = true, features = ["cloud"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "rt", "sync", "time"] }
tokio-stream = { version = "0.1.16", optional = true }
rmp-serde = "1.3.0"
seahash = "4.1.0"
rand = "0.9.2"
bon = "3.3.2"
async-trait = "0.1.85"
futures = "0.3.31"
flume = "0.11.1"
eyre = "0.6.12"
expiremap = { version="0.1.0-beta.3", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
proptest = "1.5.0"
# for eventtime examples
chrono = { version = "0.4.41", features = ["serde"] }

[features]
slatedb = ["dep:slatedb", "dep:object_store", "dep:tokio-stream"]

[[example]]
name = "slatedb_backend"
required-features = ["slatedb"]

[[example]]
name = "slatedb_backend_failing"
required-features = ["slatedb"]
