[package]
name = "malstrom-k8s-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator for Malstrom."
repository = "https://github.com/JetStreamDevelopers/k8s-operator"
license = "MIT OR Apache-2.0"
keywords = ["kubernetes", "stream", "processing", "malstrom"]
categories = ["Configuration"]

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
futures = "0.3"
k8s-openapi = { version = "0.23.0", features = ["v1_30", "schemars"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
kube-client = "0.96.0"
kube-runtime = "0.96.0"
log = "0.4.22"
schemars = "0.8.21"
serde = "1.0.213"
serde_json = "1.0.132"
tempfile = "3.14.0"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"

[features]
# enables uploading binaries directly to the operator for quick prototyping deployments
upload = []
