[package]
name = "malstrom-k8s"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
backon = "1.2.0"
bon = "2.3.0"
bytes = "1.8.0"
envconfig = "0.11.0"
flume = "0.11.1"
futures = "0.3.31"
futures-core = "0.3.31"
hickory-resolver = "0.24.1"
malstrom = { path = "../malstrom-core" }
kanal = "0.1.0-pre8"
log = "0.4.22"
once_cell = "1.20.2"
prost = "0.13.3"
quinn = "0.11.5"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
url = "2.5.2"
async-trait = "0.1.86"

[build-dependencies]
tonic-build = "0.12.3"
