[package]
name = "postbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
flume = { version = "0.11.0", features = ["async"] }
indexmap = "2.1.0"
prost = "0.12.3"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
