[package]
name = "artifact-downloader"
version = "0.1.0"
edition = "2024"
description = "Versatile downloader for arbitrary object stores and locations."
repository = "https://github.com/JetStreamDevelopers/k8s-operator"
authors = [
    "nico@acupof.xyz"
]
license = "AGPL-3.0"
keywords = ["kubernetes", "stream", "processing", "malstrom"]
categories = ["cli"]
readme = "README.md"

[[bin]]
name = "artifact-downloader"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
eyre = "0.6.12"
object_store = { version = "0.11.1", features = [
    "aws",
    "azure",
    "gcp",
] }
reqwest = "0.12.15"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
