[package]
name = "artifact-manager"
authors = [
    "nico@acupof.xyz"
]
description = "Simple http server for serving artifacts during development of Malstrom jobs"
license = "AGPL-3.0"
repository = "https://github.com/malstromdevelopers/k8s-operator"
keywords = ["malstorm", "development", "http"]
categories = ["web-programming::http-server"]
readme = "Readme.md"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artifact-manager"
path = "src/main.rs"

[dependencies]
rocket = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
