[package]
name = "artifact-manager"
authors = [
    "nico@acupof.xyz",
    "damion.werner@malstrom.io"
]
description = "Simple http server for serving artifacts during development of Malstrom jobs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MalstromDevelopers/malstrom"
keywords = ["malstorm", "development", "http"]
categories = [
    "web-programming::http-server",
    "concurrency",
    "api-bindings"
]
readme = "../README.md"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artifact-manager"
path = "src/main.rs"

[dependencies]
rocket = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
