[package]
name = "malstrom-k8s"
version = "0.1.0"
edition = "2024"
description = "Kubernetes runtime for the Malstrom stream processing framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MalstromDevelopers/malstrom"
readme = "../README.md"
categories = [
    "concurrency",
    "api-bindings"
]
keywords = [
    "stream",
    "data",
    "streaming",
    "distributed",
    "kubernetes"
]


[dependencies]
async-stream = "0.3.6"
backon = "1.2.0"
bon = "2.3.0"
envconfig = "0.11.0"
flume = "0.11.1"
futures = "0.3.31"
malstrom = { path = "../../malstrom-core" }
once_cell = "1.20.2"
prost = "0.13.3"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
async-trait = "0.1.86"
tracing = "0.1.41"
tonic-health = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"

